# electronics-shop-project

./: config.py  pyproject.toml  test_data.csv
homework-1/: main.py
homework-2/: main.py
src/: item.py  keyboard.py  phone.py
tests/: test_item.py  test_keyboard.py  test_phone.py
